--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "node-polyglot": "^2.4.2",
+    "sharp": "^0.29.3",
     "validator": "^13.6.0"
   },
   "devDependencies": {
@@ -40,8 +42,10 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.0",
     "@types/node-polyglot": "^2.4.2",
+    "@types/sharp": "^0.29.4",
     "@types/validator": "^13.6.3",
     "jest": "^27.2.5",
     "nodemon": "^2.0.13",
